# UAP-MLl

./: .pdm-python  app.py  pyproject.toml  requirements.txt
src/: citra.py
static/css/: index.css  predict.css
templates/: index.html  predict.html
